--- a/leauge.api.html
+++ b/leauge.api.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" />
     <title>de.shiro.leauge.api</title>
-    <link rel="stylesheet" href="sdpi.css">
-    <script src="jquery-3.3.1.js"></script>
-    <script src="common.js"></script>
-    <script src="server_region.js"></script>
+    <link rel="stylesheet" href="./css/sdpi.css">
+    <script src="./foundation/jquery-3.3.1.js"></script>
+    <script src="./foundation/common.js"></script>
+    <script src="./js/server_region.js"></script>
 </head>
 
 <body>
