--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <title>de.shiro.leauge.api</title>
     <meta charset="utf-8" />
-    <script src="common.js"></script>
-    <script src="moment.js"></script>
-    <script src="jquery-3.3.1.js"></script>
+    <script src="./foundation/common.js"></script>
+    <script src="./foundation/moment.js"></script>
+    <script src="./foundation/jquery-3.3.1.js"></script>
 </head>
 
 <body>
