Fix start bug on Release

--- a/propertyInspector.html
+++ b/propertyInspector.html
@@ -42,7 +42,7 @@
             <div class="sdpi-item-label">Summoners Name</div>
             <input class="sdpi-item-value" id="summonerName" required>
         </div>
-        <div class="sdpi-item" id="modus_container" style="display: none">
+        <div class="sdpi-item" id="modus_container">
             <div class="sdpi-item-label">Mode</div>
             <select class="sdpi-item-value select" id="modus">
                 <option value="1">Summoner</option>
@@ -55,7 +55,7 @@
 
             </select>
         </div>
-        <div class="sdpi-item" id="getSummoner_container" style="display: none">
+        <div class="sdpi-item" id="getSummoner_container">
             <div class="sdpi-item-label">Summoner</div>
             <select class="sdpi-item-value select" id="getSummoner">
                 <option value="1">Summoner Level</option>
