Rework div Container

--- a/propertyInspector/pi.html
+++ b/propertyInspector/pi.html
@@ -51,6 +51,8 @@
             </select>
         </div>
         <div id="placeholder">
+            <div id="option">
+            </div>
         </div>
         <div class="sdpi-item" id="automaticRefreshContainer">
             <div class="sdpi-item-label">Automatic Refresh</div>
